@@ -1,3 +1,9 @@
+2018-11-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* texmfmp.c: Make necessary changes for XeTeX in
+	getcreationdate(), getfilemoddate(), getfilesize(),
+	and getfiledump(). getfiledump() is still incomplete.
+
 2018-11-17  Joseph Wright  <joseph.wright@morningstar2.co.uk>
 
 	* texmfmp.c: Support some primitives from pdfTeX in XeTeX.
